--- a/style.css
+++ b/style.css
@@ -1,3 +1,131 @@
 body{
     font-family: 'Bebas Neue', cursive;
+    margin: 0%;
+}
+
+.nav {
+    
+    list-style-type: none;
+    text-align: right;
+    margin: 0;
+    padding: 0;
+  }
+  h1{
+      font-size: 50px;
+      font-weight: 400;
+      line-height: 19%;
+  }
+  P{
+      color: gray;
+  }
+
+  .nav li {
+    display: inline-block;
+    font-size: 18px;
+    padding: 10px;
+    font-weight: 100;
+  }
+  section{
+       height: 700px;
+  }
+.width-set{
+    
+    width: 40%;
+    float: left;
+    margin-left: 3%;
+    padding-left: 5%;
+    margin-top: 5%;
+}
+.width-set img{
+    height: 400px;
+    
+    
+}
+.left{
+    padding-top: 30px;
+}
+.name{
+    color: rgba(22, 7, 160, 0.952);
+}
+.title{
+    color:tomato;
+}
+.button{
+    text-decoration: none;
+    background-color: tomato;
+    padding: 10px 30px;
+    border-radius: 5px;
+    color: white;
+}
+.right{
+    padding-top: 30px;
+}
+
+.three-width{
+    width: 25%;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    
+    border-radius: 10px;
+    float: left;
+    margin-left: 6%;
+  }
+.project h1{
+    text-align: center;
+    padding-bottom: 5%;
+}
+.container h4{
+    padding-left: 5px;
+    padding-top: 0;
+    line-height: 0%;
+    font-weight: 200;
+}
+.container p{
+    padding-left: 5px;
+    padding-top: 0;
+    
+    
+}
+.middle {
+    position: relative;
+  text-align: center;
+}
+.middle img{
+     height: 35%;
+     width: 60%;
+     text-align: center;
+}
+.centered {
+    position: absolute;
+    top: 50%;
+    left: 35%;
+    transform: translate(-50%, -50%);
+    color: white;
+  }
+  .center-right{
+    position: absolute;
+    top: 45%;
+    right: 25%;
+  }
+  .bottom{
+      text-align: center;
+  }
+  .bottom a{
+      text-decoration: none;
+      color: slateblue;
+  }
+  .icon li{
+    display: inline-block;
+  }
+ 
+  .icon img{
+      width: 40%;
+      
+  }
+  footer p{
+    position: relative;
+    text-align: center;
+    background-color: teal;
+    height: 100px;
+    padding-top: 5%;
+    color: tomato;
 }
